Fix flou on mobile version

--- a/mobile/css/commun.css
+++ b/mobile/css/commun.css
@@ -45,6 +45,7 @@ legend{
     vertical-align: top;
     padding : 3px;
     margin : 3px;
+    text-shadow: initial;
 }
 
 .cursor{
